k8s/ArgoCD/namespace.yaml
apiVersion: v1                      # core/v1 API 그룹을 사용. Namespace 리소스는 core 그룹에 포함됩니다.
kind: Namespace

metadata:
  name: argocd
